--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "bootstrap": "^4.5.3",
     "gatsby": "^2.25.3",
     "gatsby-plugin-manifest": "^2.5.2",
-    "gatsby-plugin-offline": "^3.3.2",
+    "gatsby-plugin-offline": "^3.3.3",
     "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-sass": "^2.4.2",
     "gatsby-source-filesystem": "^2.4.2",
     "gatsby-transformer-remark": "^2.9.2",
-    "node-sass": "^4.14.1",
+    "node-sass": "^4.14.1 <5.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
