--- a/package.json
+++ b/package.json
@@ -15,26 +15,26 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "bootstrap": "^4.5.3",
-    "gatsby": "^2.27.0",
-    "gatsby-image": "^2.6.0",
-    "gatsby-plugin-manifest": "^2.7.0",
-    "gatsby-plugin-offline": "^3.5.0",
-    "gatsby-plugin-react-helmet": "^3.5.0",
-    "gatsby-plugin-sass": "^2.6.0",
-    "gatsby-plugin-sharp": "^2.9.0",
-    "gatsby-source-filesystem": "^2.6.1",
-    "gatsby-transformer-remark": "^2.11.0",
-    "gatsby-transformer-sharp": "^2.7.0",
-    "node-sass": "^4.14.1 <5.0.0",
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "gatsby": "^2.29.2",
+    "gatsby-image": "^2.8.0",
+    "gatsby-plugin-manifest": "^2.9.1",
+    "gatsby-plugin-offline": "^3.7.1",
+    "gatsby-plugin-postcss": "^3.4.0",
+    "gatsby-plugin-react-helmet": "^3.7.0",
+    "gatsby-plugin-sharp": "^2.11.2",
+    "gatsby-source-filesystem": "^2.8.1",
+    "gatsby-transformer-remark": "^2.13.1",
+    "gatsby-transformer-sharp": "^2.9.0",
+    "postcss": "^8.2.1",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-icons": "^3.11.0"
+    "react-icons": "^4.1.0"
   },
   "devDependencies": {
-    "prettier": "2.2.0"
+    "prettier": "2.2.1",
+    "tailwindcss": "^2.0.2"
   },
   "keywords": [
     "gatsby"
