--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/fontawesome-free": "^5.15.1",
     "gatsby": "^2.30.1",
     "gatsby-image": "^2.9.0",
+    "gatsby-plugin-google-analytics": "^2.9.0",
     "gatsby-plugin-manifest": "^2.10.0",
     "gatsby-plugin-offline": "^3.8.0",
     "gatsby-plugin-postcss": "^3.5.0",
