--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "axios": "^0.21.4",
     "gatsby": "^3.13.0",
     "gatsby-plugin-google-gtag": "^3.13.0",
     "gatsby-plugin-image": "1.13.0",
