--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
+    "deploy": "gatsby clean && gatsby build && gh-pages -d public",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
@@ -37,6 +37,7 @@
     "react-icons": "^4.2.0"
   },
   "devDependencies": {
+    "gh-pages":"^3.2.3",
     "html-loader": "^2.1.2",
     "prettier": "2.3.2",
     "tailwindcss": "^2.2.11"
