download: update releases.json

--- a/src/data/download/releases.json
+++ b/src/data/download/releases.json
@@ -1,5 +1,151 @@
 [
   {
+    "url": "https://api.github.com/repos/crownengine/crown/releases/184774606",
+    "assets_url": "https://api.github.com/repos/crownengine/crown/releases/184774606/assets",
+    "upload_url": "https://uploads.github.com/repos/crownengine/crown/releases/184774606/assets{?name,label}",
+    "html_url": "https://github.com/crownengine/crown/releases/tag/v0.52.0",
+    "id": 184774606,
+    "author": {
+      "login": "dbartolini",
+      "id": 2070946,
+      "node_id": "MDQ6VXNlcjIwNzA5NDY=",
+      "avatar_url": "https://avatars.githubusercontent.com/u/2070946?v=4",
+      "gravatar_id": "",
+      "url": "https://api.github.com/users/dbartolini",
+      "html_url": "https://github.com/dbartolini",
+      "followers_url": "https://api.github.com/users/dbartolini/followers",
+      "following_url": "https://api.github.com/users/dbartolini/following{/other_user}",
+      "gists_url": "https://api.github.com/users/dbartolini/gists{/gist_id}",
+      "starred_url": "https://api.github.com/users/dbartolini/starred{/owner}{/repo}",
+      "subscriptions_url": "https://api.github.com/users/dbartolini/subscriptions",
+      "organizations_url": "https://api.github.com/users/dbartolini/orgs",
+      "repos_url": "https://api.github.com/users/dbartolini/repos",
+      "events_url": "https://api.github.com/users/dbartolini/events{/privacy}",
+      "received_events_url": "https://api.github.com/users/dbartolini/received_events",
+      "type": "User",
+      "user_view_type": "public",
+      "site_admin": false
+    },
+    "node_id": "RE_kwDOAFEyY84LA2_O",
+    "tag_name": "v0.52.0",
+    "target_commitish": "master",
+    "name": "",
+    "draft": false,
+    "prerelease": false,
+    "created_at": "2024-11-11T22:32:12Z",
+    "published_at": "2024-11-11T23:15:38Z",
+    "assets": [
+      {
+        "url": "https://api.github.com/repos/crownengine/crown/releases/assets/205783580",
+        "id": 205783580,
+        "node_id": "RA_kwDOAFEyY84MRAIc",
+        "name": "crown-0.52.0-linux-x64.tar.gz",
+        "label": null,
+        "uploader": {
+          "login": "dbartolini",
+          "id": 2070946,
+          "node_id": "MDQ6VXNlcjIwNzA5NDY=",
+          "avatar_url": "https://avatars.githubusercontent.com/u/2070946?v=4",
+          "gravatar_id": "",
+          "url": "https://api.github.com/users/dbartolini",
+          "html_url": "https://github.com/dbartolini",
+          "followers_url": "https://api.github.com/users/dbartolini/followers",
+          "following_url": "https://api.github.com/users/dbartolini/following{/other_user}",
+          "gists_url": "https://api.github.com/users/dbartolini/gists{/gist_id}",
+          "starred_url": "https://api.github.com/users/dbartolini/starred{/owner}{/repo}",
+          "subscriptions_url": "https://api.github.com/users/dbartolini/subscriptions",
+          "organizations_url": "https://api.github.com/users/dbartolini/orgs",
+          "repos_url": "https://api.github.com/users/dbartolini/repos",
+          "events_url": "https://api.github.com/users/dbartolini/events{/privacy}",
+          "received_events_url": "https://api.github.com/users/dbartolini/received_events",
+          "type": "User",
+          "user_view_type": "public",
+          "site_admin": false
+        },
+        "content_type": "application/gzip",
+        "state": "uploaded",
+        "size": 51489136,
+        "download_count": 0,
+        "created_at": "2024-11-11T23:14:59Z",
+        "updated_at": "2024-11-11T23:15:04Z",
+        "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.52.0/crown-0.52.0-linux-x64.tar.gz"
+      },
+      {
+        "url": "https://api.github.com/repos/crownengine/crown/releases/assets/205783599",
+        "id": 205783599,
+        "node_id": "RA_kwDOAFEyY84MRAIv",
+        "name": "crown-0.52.0-windows-x64.zip",
+        "label": null,
+        "uploader": {
+          "login": "dbartolini",
+          "id": 2070946,
+          "node_id": "MDQ6VXNlcjIwNzA5NDY=",
+          "avatar_url": "https://avatars.githubusercontent.com/u/2070946?v=4",
+          "gravatar_id": "",
+          "url": "https://api.github.com/users/dbartolini",
+          "html_url": "https://github.com/dbartolini",
+          "followers_url": "https://api.github.com/users/dbartolini/followers",
+          "following_url": "https://api.github.com/users/dbartolini/following{/other_user}",
+          "gists_url": "https://api.github.com/users/dbartolini/gists{/gist_id}",
+          "starred_url": "https://api.github.com/users/dbartolini/starred{/owner}{/repo}",
+          "subscriptions_url": "https://api.github.com/users/dbartolini/subscriptions",
+          "organizations_url": "https://api.github.com/users/dbartolini/orgs",
+          "repos_url": "https://api.github.com/users/dbartolini/repos",
+          "events_url": "https://api.github.com/users/dbartolini/events{/privacy}",
+          "received_events_url": "https://api.github.com/users/dbartolini/received_events",
+          "type": "User",
+          "user_view_type": "public",
+          "site_admin": false
+        },
+        "content_type": "application/zip",
+        "state": "uploaded",
+        "size": 87608028,
+        "download_count": 0,
+        "created_at": "2024-11-11T23:15:04Z",
+        "updated_at": "2024-11-11T23:15:11Z",
+        "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.52.0/crown-0.52.0-windows-x64.zip"
+      },
+      {
+        "url": "https://api.github.com/repos/crownengine/crown/releases/assets/205783656",
+        "id": 205783656,
+        "node_id": "RA_kwDOAFEyY84MRAJo",
+        "name": "SHA256SUMS",
+        "label": null,
+        "uploader": {
+          "login": "dbartolini",
+          "id": 2070946,
+          "node_id": "MDQ6VXNlcjIwNzA5NDY=",
+          "avatar_url": "https://avatars.githubusercontent.com/u/2070946?v=4",
+          "gravatar_id": "",
+          "url": "https://api.github.com/users/dbartolini",
+          "html_url": "https://github.com/dbartolini",
+          "followers_url": "https://api.github.com/users/dbartolini/followers",
+          "following_url": "https://api.github.com/users/dbartolini/following{/other_user}",
+          "gists_url": "https://api.github.com/users/dbartolini/gists{/gist_id}",
+          "starred_url": "https://api.github.com/users/dbartolini/starred{/owner}{/repo}",
+          "subscriptions_url": "https://api.github.com/users/dbartolini/subscriptions",
+          "organizations_url": "https://api.github.com/users/dbartolini/orgs",
+          "repos_url": "https://api.github.com/users/dbartolini/repos",
+          "events_url": "https://api.github.com/users/dbartolini/events{/privacy}",
+          "received_events_url": "https://api.github.com/users/dbartolini/received_events",
+          "type": "User",
+          "user_view_type": "public",
+          "site_admin": false
+        },
+        "content_type": "application/octet-stream",
+        "state": "uploaded",
+        "size": 195,
+        "download_count": 0,
+        "created_at": "2024-11-11T23:15:11Z",
+        "updated_at": "2024-11-11T23:15:11Z",
+        "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.52.0/SHA256SUMS"
+      }
+    ],
+    "tarball_url": "https://api.github.com/repos/crownengine/crown/tarball/v0.52.0",
+    "zipball_url": "https://api.github.com/repos/crownengine/crown/zipball/v0.52.0",
+    "body": "[Changelog](https://docs.crownengine.org/html/v0.52.0/changelog.html#nov-2024)"
+  },
+  {
     "url": "https://api.github.com/repos/crownengine/crown/releases/182312311",
     "assets_url": "https://api.github.com/repos/crownengine/crown/releases/182312311/assets",
     "upload_url": "https://uploads.github.com/repos/crownengine/crown/releases/182312311/assets{?name,label}",
@@ -65,7 +211,7 @@
         "content_type": "application/gzip",
         "state": "uploaded",
         "size": 51574719,
-        "download_count": 0,
+        "download_count": 22,
         "created_at": "2024-10-28T17:43:42Z",
         "updated_at": "2024-10-28T17:43:46Z",
         "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.51.0/crown-0.51.0-linux-x64.tar.gz"
@@ -100,7 +246,7 @@
         "content_type": "application/zip",
         "state": "uploaded",
         "size": 87680930,
-        "download_count": 0,
+        "download_count": 85,
         "created_at": "2024-10-28T17:43:34Z",
         "updated_at": "2024-10-28T17:43:42Z",
         "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.51.0/crown-0.51.0-windows-x64.zip"
@@ -135,7 +281,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 195,
-        "download_count": 0,
+        "download_count": 4,
         "created_at": "2024-10-28T17:43:46Z",
         "updated_at": "2024-10-28T17:43:47Z",
         "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.51.0/SHA256SUMS"
@@ -143,7 +289,19 @@
     ],
     "tarball_url": "https://api.github.com/repos/crownengine/crown/tarball/v0.51.0",
     "zipball_url": "https://api.github.com/repos/crownengine/crown/zipball/v0.51.0",
-    "body": "[Changelog](https://docs.crownengine.org/html/v0.51.0/changelog.html#oct-2024)"
+    "body": "[Changelog](https://docs.crownengine.org/html/v0.51.0/changelog.html#oct-2024)",
+    "reactions": {
+      "url": "https://api.github.com/repos/crownengine/crown/releases/182312311/reactions",
+      "total_count": 3,
+      "+1": 0,
+      "-1": 0,
+      "laugh": 0,
+      "hooray": 3,
+      "confused": 0,
+      "heart": 0,
+      "rocket": 0,
+      "eyes": 0
+    }
   },
   {
     "url": "https://api.github.com/repos/crownengine/crown/releases/179429114",
@@ -246,7 +404,7 @@
         "content_type": "application/zip",
         "state": "uploaded",
         "size": 83377667,
-        "download_count": 72,
+        "download_count": 74,
         "created_at": "2024-10-10T21:38:20Z",
         "updated_at": "2024-10-10T21:38:27Z",
         "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.50.0/crown-0.50.0-windows-x64.zip"
@@ -743,7 +901,7 @@
         "content_type": "application/gzip",
         "state": "uploaded",
         "size": 25447377,
-        "download_count": 120,
+        "download_count": 121,
         "created_at": "2023-02-07T00:13:49Z",
         "updated_at": "2023-02-07T00:14:05Z",
         "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.47.0/crown-0.47.0-linux-x64.tar.gz"
@@ -889,7 +1047,7 @@
         "content_type": "application/gzip",
         "state": "uploaded",
         "size": 9957176,
-        "download_count": 36,
+        "download_count": 37,
         "created_at": "2021-11-19T23:00:36Z",
         "updated_at": "2021-11-19T23:00:43Z",
         "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.46.0/crown-0.46.0-android-arm.tar.gz"
@@ -1426,7 +1584,7 @@
         "content_type": "application/zip",
         "state": "uploaded",
         "size": 36925872,
-        "download_count": 90,
+        "download_count": 91,
         "created_at": "2021-05-13T21:16:40Z",
         "updated_at": "2021-05-13T21:16:45Z",
         "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.44.0/crown-0.44.0-windows-x64.zip"
@@ -1607,7 +1765,7 @@
         "content_type": "application/gzip",
         "state": "uploaded",
         "size": 22825173,
-        "download_count": 35,
+        "download_count": 36,
         "created_at": "2021-04-17T00:51:38Z",
         "updated_at": "2021-04-17T00:51:40Z",
         "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.43.0/crown-0.43.0-linux-x64.tar.gz"
@@ -2115,7 +2273,7 @@
         "content_type": "application/gzip",
         "state": "uploaded",
         "size": 22591584,
-        "download_count": 18,
+        "download_count": 19,
         "created_at": "2021-01-06T14:59:59Z",
         "updated_at": "2021-01-06T15:03:15Z",
         "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.40.0/crown-0.40.0-linux-x64.tar.gz"
