--- a/src/data/download/releases.json
+++ b/src/data/download/releases.json
@@ -1,5 +1,151 @@
 [
   {
+    "url": "https://api.github.com/repos/crownengine/crown/releases/188288503",
+    "assets_url": "https://api.github.com/repos/crownengine/crown/releases/188288503/assets",
+    "upload_url": "https://uploads.github.com/repos/crownengine/crown/releases/188288503/assets{?name,label}",
+    "html_url": "https://github.com/crownengine/crown/releases/tag/v0.53.0",
+    "id": 188288503,
+    "author": {
+      "login": "dbartolini",
+      "id": 2070946,
+      "node_id": "MDQ6VXNlcjIwNzA5NDY=",
+      "avatar_url": "https://avatars.githubusercontent.com/u/2070946?v=4",
+      "gravatar_id": "",
+      "url": "https://api.github.com/users/dbartolini",
+      "html_url": "https://github.com/dbartolini",
+      "followers_url": "https://api.github.com/users/dbartolini/followers",
+      "following_url": "https://api.github.com/users/dbartolini/following{/other_user}",
+      "gists_url": "https://api.github.com/users/dbartolini/gists{/gist_id}",
+      "starred_url": "https://api.github.com/users/dbartolini/starred{/owner}{/repo}",
+      "subscriptions_url": "https://api.github.com/users/dbartolini/subscriptions",
+      "organizations_url": "https://api.github.com/users/dbartolini/orgs",
+      "repos_url": "https://api.github.com/users/dbartolini/repos",
+      "events_url": "https://api.github.com/users/dbartolini/events{/privacy}",
+      "received_events_url": "https://api.github.com/users/dbartolini/received_events",
+      "type": "User",
+      "user_view_type": "public",
+      "site_admin": false
+    },
+    "node_id": "RE_kwDOAFEyY84LOQ33",
+    "tag_name": "v0.53.0",
+    "target_commitish": "master",
+    "name": "",
+    "draft": false,
+    "prerelease": false,
+    "created_at": "2024-11-30T09:13:44Z",
+    "published_at": "2024-11-30T10:28:26Z",
+    "assets": [
+      {
+        "url": "https://api.github.com/repos/crownengine/crown/releases/assets/210039459",
+        "id": 210039459,
+        "node_id": "RA_kwDOAFEyY84MhPKj",
+        "name": "crown-0.53.0-linux-x64.tar.gz",
+        "label": null,
+        "uploader": {
+          "login": "dbartolini",
+          "id": 2070946,
+          "node_id": "MDQ6VXNlcjIwNzA5NDY=",
+          "avatar_url": "https://avatars.githubusercontent.com/u/2070946?v=4",
+          "gravatar_id": "",
+          "url": "https://api.github.com/users/dbartolini",
+          "html_url": "https://github.com/dbartolini",
+          "followers_url": "https://api.github.com/users/dbartolini/followers",
+          "following_url": "https://api.github.com/users/dbartolini/following{/other_user}",
+          "gists_url": "https://api.github.com/users/dbartolini/gists{/gist_id}",
+          "starred_url": "https://api.github.com/users/dbartolini/starred{/owner}{/repo}",
+          "subscriptions_url": "https://api.github.com/users/dbartolini/subscriptions",
+          "organizations_url": "https://api.github.com/users/dbartolini/orgs",
+          "repos_url": "https://api.github.com/users/dbartolini/repos",
+          "events_url": "https://api.github.com/users/dbartolini/events{/privacy}",
+          "received_events_url": "https://api.github.com/users/dbartolini/received_events",
+          "type": "User",
+          "user_view_type": "public",
+          "site_admin": false
+        },
+        "content_type": "application/gzip",
+        "state": "uploaded",
+        "size": 51594661,
+        "download_count": 0,
+        "created_at": "2024-11-30T09:49:27Z",
+        "updated_at": "2024-11-30T09:49:35Z",
+        "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.53.0/crown-0.53.0-linux-x64.tar.gz"
+      },
+      {
+        "url": "https://api.github.com/repos/crownengine/crown/releases/assets/210039439",
+        "id": 210039439,
+        "node_id": "RA_kwDOAFEyY84MhPKP",
+        "name": "crown-0.53.0-windows-x64.zip",
+        "label": null,
+        "uploader": {
+          "login": "dbartolini",
+          "id": 2070946,
+          "node_id": "MDQ6VXNlcjIwNzA5NDY=",
+          "avatar_url": "https://avatars.githubusercontent.com/u/2070946?v=4",
+          "gravatar_id": "",
+          "url": "https://api.github.com/users/dbartolini",
+          "html_url": "https://github.com/dbartolini",
+          "followers_url": "https://api.github.com/users/dbartolini/followers",
+          "following_url": "https://api.github.com/users/dbartolini/following{/other_user}",
+          "gists_url": "https://api.github.com/users/dbartolini/gists{/gist_id}",
+          "starred_url": "https://api.github.com/users/dbartolini/starred{/owner}{/repo}",
+          "subscriptions_url": "https://api.github.com/users/dbartolini/subscriptions",
+          "organizations_url": "https://api.github.com/users/dbartolini/orgs",
+          "repos_url": "https://api.github.com/users/dbartolini/repos",
+          "events_url": "https://api.github.com/users/dbartolini/events{/privacy}",
+          "received_events_url": "https://api.github.com/users/dbartolini/received_events",
+          "type": "User",
+          "user_view_type": "public",
+          "site_admin": false
+        },
+        "content_type": "application/zip",
+        "state": "uploaded",
+        "size": 87864534,
+        "download_count": 0,
+        "created_at": "2024-11-30T09:49:16Z",
+        "updated_at": "2024-11-30T09:49:27Z",
+        "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.53.0/crown-0.53.0-windows-x64.zip"
+      },
+      {
+        "url": "https://api.github.com/repos/crownengine/crown/releases/assets/210039437",
+        "id": 210039437,
+        "node_id": "RA_kwDOAFEyY84MhPKN",
+        "name": "SHA256SUMS",
+        "label": null,
+        "uploader": {
+          "login": "dbartolini",
+          "id": 2070946,
+          "node_id": "MDQ6VXNlcjIwNzA5NDY=",
+          "avatar_url": "https://avatars.githubusercontent.com/u/2070946?v=4",
+          "gravatar_id": "",
+          "url": "https://api.github.com/users/dbartolini",
+          "html_url": "https://github.com/dbartolini",
+          "followers_url": "https://api.github.com/users/dbartolini/followers",
+          "following_url": "https://api.github.com/users/dbartolini/following{/other_user}",
+          "gists_url": "https://api.github.com/users/dbartolini/gists{/gist_id}",
+          "starred_url": "https://api.github.com/users/dbartolini/starred{/owner}{/repo}",
+          "subscriptions_url": "https://api.github.com/users/dbartolini/subscriptions",
+          "organizations_url": "https://api.github.com/users/dbartolini/orgs",
+          "repos_url": "https://api.github.com/users/dbartolini/repos",
+          "events_url": "https://api.github.com/users/dbartolini/events{/privacy}",
+          "received_events_url": "https://api.github.com/users/dbartolini/received_events",
+          "type": "User",
+          "user_view_type": "public",
+          "site_admin": false
+        },
+        "content_type": "application/octet-stream",
+        "state": "uploaded",
+        "size": 191,
+        "download_count": 0,
+        "created_at": "2024-11-30T09:49:15Z",
+        "updated_at": "2024-11-30T09:49:16Z",
+        "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.53.0/SHA256SUMS"
+      }
+    ],
+    "tarball_url": "https://api.github.com/repos/crownengine/crown/tarball/v0.53.0",
+    "zipball_url": "https://api.github.com/repos/crownengine/crown/zipball/v0.53.0",
+    "body": "Crown 0.53 is out with a new API for 3D GUIs, conditional render states, refined Sprite and Font importers, thumbnails in the Project Tree and many Runtime fixes:\r\n\r\n:scroll: [Changelog](https://docs.crownengine.org/html/v0.53.0/changelog.html#nov-2024)\r\n:floppy_disk: [Download](https://crownengine.org/download)\r\n:heart: [Donate](https://crownengine.org/fund)\r\n\r\n![Screenshot From 2024-11-30 00-34-09](https://github.com/user-attachments/assets/293c1106-657c-45f1-a0d7-81adf2be0d72)\r\n![Screenshot From 2024-11-29 22-09-07](https://github.com/user-attachments/assets/320006e9-93c0-4c0c-a33a-b75af75000a7)"
+  },
+  {
     "url": "https://api.github.com/repos/crownengine/crown/releases/184774606",
     "assets_url": "https://api.github.com/repos/crownengine/crown/releases/184774606/assets",
     "upload_url": "https://uploads.github.com/repos/crownengine/crown/releases/184774606/assets{?name,label}",
@@ -65,7 +211,7 @@
         "content_type": "application/gzip",
         "state": "uploaded",
         "size": 51489136,
-        "download_count": 0,
+        "download_count": 46,
         "created_at": "2024-11-11T23:14:59Z",
         "updated_at": "2024-11-11T23:15:04Z",
         "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.52.0/crown-0.52.0-linux-x64.tar.gz"
@@ -100,7 +246,7 @@
         "content_type": "application/zip",
         "state": "uploaded",
         "size": 87608028,
-        "download_count": 0,
+        "download_count": 76,
         "created_at": "2024-11-11T23:15:04Z",
         "updated_at": "2024-11-11T23:15:11Z",
         "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.52.0/crown-0.52.0-windows-x64.zip"
@@ -135,7 +281,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 195,
-        "download_count": 0,
+        "download_count": 4,
         "created_at": "2024-11-11T23:15:11Z",
         "updated_at": "2024-11-11T23:15:11Z",
         "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.52.0/SHA256SUMS"
@@ -143,7 +289,19 @@
     ],
     "tarball_url": "https://api.github.com/repos/crownengine/crown/tarball/v0.52.0",
     "zipball_url": "https://api.github.com/repos/crownengine/crown/zipball/v0.52.0",
-    "body": "[Changelog](https://docs.crownengine.org/html/v0.52.0/changelog.html#nov-2024)"
+    "body": "Crown 0.52 is out with ability to add/remove Unit components, many Camera enhancements, improved Gui subsystem, enriched Hi-DPI (SVG icons!), and some important Runtime corrections:\r\n\r\n:scroll: [Changelog](https://docs.crownengine.org/html/v0.52.0/changelog.html#nov-2024)\r\n:floppy_disk: [Download](https://crownengine.org/download)\r\n:heart: [Donate](https://crownengine.org/fund)\r\n\r\n![editor](https://github.com/user-attachments/assets/bd63a347-8bc5-4fbe-be31-5779578dbeba)",
+    "reactions": {
+      "url": "https://api.github.com/repos/crownengine/crown/releases/184774606/reactions",
+      "total_count": 4,
+      "+1": 2,
+      "-1": 0,
+      "laugh": 1,
+      "hooray": 0,
+      "confused": 0,
+      "heart": 1,
+      "rocket": 0,
+      "eyes": 0
+    }
   },
   {
     "url": "https://api.github.com/repos/crownengine/crown/releases/182312311",
@@ -246,7 +404,7 @@
         "content_type": "application/zip",
         "state": "uploaded",
         "size": 87680930,
-        "download_count": 85,
+        "download_count": 86,
         "created_at": "2024-10-28T17:43:34Z",
         "updated_at": "2024-10-28T17:43:42Z",
         "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.51.0/crown-0.51.0-windows-x64.zip"
@@ -1263,7 +1421,7 @@
         "content_type": "application/gzip",
         "state": "uploaded",
         "size": 9957096,
-        "download_count": 13,
+        "download_count": 14,
         "created_at": "2021-07-30T15:52:17Z",
         "updated_at": "2021-07-30T15:52:20Z",
         "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.45.0/crown-0.45.0-android-arm.tar.gz"
@@ -1298,7 +1456,7 @@
         "content_type": "application/gzip",
         "state": "uploaded",
         "size": 9941397,
-        "download_count": 17,
+        "download_count": 18,
         "created_at": "2021-07-30T15:52:20Z",
         "updated_at": "2021-07-30T15:52:21Z",
         "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.45.0/crown-0.45.0-android-arm64.tar.gz"
@@ -1479,7 +1637,7 @@
         "content_type": "application/gzip",
         "state": "uploaded",
         "size": 9957798,
-        "download_count": 15,
+        "download_count": 16,
         "created_at": "2021-05-13T21:16:28Z",
         "updated_at": "2021-05-13T21:16:31Z",
         "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.44.0/crown-0.44.0-android-arm.tar.gz"
@@ -1514,7 +1672,7 @@
         "content_type": "application/gzip",
         "state": "uploaded",
         "size": 9941751,
-        "download_count": 17,
+        "download_count": 18,
         "created_at": "2021-05-13T21:16:31Z",
         "updated_at": "2021-05-13T21:16:33Z",
         "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.44.0/crown-0.44.0-android-arm64.tar.gz"
@@ -1584,7 +1742,7 @@
         "content_type": "application/zip",
         "state": "uploaded",
         "size": 36925872,
-        "download_count": 91,
+        "download_count": 92,
         "created_at": "2021-05-13T21:16:40Z",
         "updated_at": "2021-05-13T21:16:45Z",
         "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.44.0/crown-0.44.0-windows-x64.zip"
@@ -2273,7 +2431,7 @@
         "content_type": "application/gzip",
         "state": "uploaded",
         "size": 22591584,
-        "download_count": 19,
+        "download_count": 20,
         "created_at": "2021-01-06T14:59:59Z",
         "updated_at": "2021-01-06T15:03:15Z",
         "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.40.0/crown-0.40.0-linux-x64.tar.gz"
@@ -2308,7 +2466,7 @@
         "content_type": "application/zip",
         "state": "uploaded",
         "size": 36205348,
-        "download_count": 19,
+        "download_count": 20,
         "created_at": "2021-01-06T15:03:15Z",
         "updated_at": "2021-01-06T15:08:44Z",
         "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.40.0/crown-0.40.0-windows-x64.zip"
@@ -2343,7 +2501,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 191,
-        "download_count": 10,
+        "download_count": 11,
         "created_at": "2021-01-06T15:08:44Z",
         "updated_at": "2021-01-06T15:08:45Z",
         "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.40.0/SHA256SUMS"
