--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.7.1",
-    "gatsby": "^5.14.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@types/react-helmet": "^6.1.11",
+    "gatsby": "^5.14.1",
     "gatsby-plugin-google-gtag": "^5.14.0",
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-manifest": "^5.14.0",
@@ -32,14 +33,19 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "ajv": "^8.17.1",
     "gh-pages": "^6.2.0",
     "html-loader": "^5.1.0",
-    "prettier": "^3.4.1",
-    "tailwindcss": "^3.4.15"
+    "prettier": "^3.4.2",
+    "tailwindcss": "^3.4.17"
+  },
+  "overrides": {
+    "react-server-dom-webpack@0.0.0-experimental-c8b778b7f-20220825": {
+      "react": "^18.2.0"
+    }
   },
   "keywords": [
     "gatsby"
