--- a/src/data/download/releases.json
+++ b/src/data/download/releases.json
@@ -1,9 +1,9 @@
 {
-  "url": "https://api.github.com/repos/crownengine/crown/releases/188288503",
-  "assets_url": "https://api.github.com/repos/crownengine/crown/releases/188288503/assets",
-  "upload_url": "https://uploads.github.com/repos/crownengine/crown/releases/188288503/assets{?name,label}",
-  "html_url": "https://github.com/crownengine/crown/releases/tag/v0.53.0",
-  "id": 188288503,
+  "url": "https://api.github.com/repos/crownengine/crown/releases/194499221",
+  "assets_url": "https://api.github.com/repos/crownengine/crown/releases/194499221/assets",
+  "upload_url": "https://uploads.github.com/repos/crownengine/crown/releases/194499221/assets{?name,label}",
+  "html_url": "https://github.com/crownengine/crown/releases/tag/v0.54.0",
+  "id": 194499221,
   "author": {
     "login": "dbartolini",
     "id": 2070946,
@@ -25,20 +25,20 @@
     "user_view_type": "public",
     "site_admin": false
   },
-  "node_id": "RE_kwDOAFEyY84LOQ33",
-  "tag_name": "v0.53.0",
+  "node_id": "RE_kwDOAFEyY84Ll9KV",
+  "tag_name": "v0.54.0",
   "target_commitish": "master",
   "name": "",
   "draft": false,
   "prerelease": false,
-  "created_at": "2024-11-30T09:13:44Z",
-  "published_at": "2024-11-30T10:28:26Z",
+  "created_at": "2025-01-13T17:40:48Z",
+  "published_at": "2025-01-13T18:55:24Z",
   "assets": [
     {
-      "url": "https://api.github.com/repos/crownengine/crown/releases/assets/210039459",
-      "id": 210039459,
-      "node_id": "RA_kwDOAFEyY84MhPKj",
-      "name": "crown-0.53.0-linux-x64.tar.gz",
+      "url": "https://api.github.com/repos/crownengine/crown/releases/assets/220131536",
+      "id": 220131536,
+      "node_id": "RA_kwDOAFEyY84NHvDQ",
+      "name": "crown-0.54.0-linux-x64.tar.gz",
       "label": null,
       "uploader": {
         "login": "dbartolini",
@@ -63,17 +63,17 @@
       },
       "content_type": "application/gzip",
       "state": "uploaded",
-      "size": 51594661,
-      "download_count": 11,
-      "created_at": "2024-11-30T09:49:27Z",
-      "updated_at": "2024-11-30T09:49:35Z",
-      "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.53.0/crown-0.53.0-linux-x64.tar.gz"
+      "size": 54934226,
+      "download_count": 0,
+      "created_at": "2025-01-13T18:54:52Z",
+      "updated_at": "2025-01-13T18:54:55Z",
+      "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.54.0/crown-0.54.0-linux-x64.tar.gz"
     },
     {
-      "url": "https://api.github.com/repos/crownengine/crown/releases/assets/210039439",
-      "id": 210039439,
-      "node_id": "RA_kwDOAFEyY84MhPKP",
-      "name": "crown-0.53.0-windows-x64.zip",
+      "url": "https://api.github.com/repos/crownengine/crown/releases/assets/220131527",
+      "id": 220131527,
+      "node_id": "RA_kwDOAFEyY84NHvDH",
+      "name": "crown-0.54.0-windows-x64.zip",
       "label": null,
       "uploader": {
         "login": "dbartolini",
@@ -98,16 +98,16 @@
       },
       "content_type": "application/zip",
       "state": "uploaded",
-      "size": 87864534,
-      "download_count": 8,
-      "created_at": "2024-11-30T09:49:16Z",
-      "updated_at": "2024-11-30T09:49:27Z",
-      "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.53.0/crown-0.53.0-windows-x64.zip"
+      "size": 91495687,
+      "download_count": 0,
+      "created_at": "2025-01-13T18:54:46Z",
+      "updated_at": "2025-01-13T18:54:52Z",
+      "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.54.0/crown-0.54.0-windows-x64.zip"
     },
     {
-      "url": "https://api.github.com/repos/crownengine/crown/releases/assets/210039437",
-      "id": 210039437,
-      "node_id": "RA_kwDOAFEyY84MhPKN",
+      "url": "https://api.github.com/repos/crownengine/crown/releases/assets/220131526",
+      "id": 220131526,
+      "node_id": "RA_kwDOAFEyY84NHvDG",
       "name": "SHA256SUMS",
       "label": null,
       "uploader": {
@@ -134,25 +134,13 @@
       "content_type": "application/octet-stream",
       "state": "uploaded",
       "size": 191,
-      "download_count": 3,
-      "created_at": "2024-11-30T09:49:15Z",
-      "updated_at": "2024-11-30T09:49:16Z",
-      "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.53.0/SHA256SUMS"
+      "download_count": 0,
+      "created_at": "2025-01-13T18:54:45Z",
+      "updated_at": "2025-01-13T18:54:46Z",
+      "browser_download_url": "https://github.com/crownengine/crown/releases/download/v0.54.0/SHA256SUMS"
     }
   ],
-  "tarball_url": "https://api.github.com/repos/crownengine/crown/tarball/v0.53.0",
-  "zipball_url": "https://api.github.com/repos/crownengine/crown/zipball/v0.53.0",
-  "body": "Crown 0.53 is out with a new API for 3D GUIs, conditional render states, refined Sprite and Font importers, thumbnails in the Project Tree and many Runtime fixes:\r\n\r\n:scroll: [Changelog](https://docs.crownengine.org/html/v0.53.0/changelog.html#nov-2024)\r\n:floppy_disk: [Download](https://crownengine.org/download)\r\n:heart: [Donate](https://crownengine.org/fund)\r\n\r\n![Screenshot From 2024-11-30 00-34-09](https://github.com/user-attachments/assets/293c1106-657c-45f1-a0d7-81adf2be0d72)\r\n![Screenshot From 2024-11-29 22-09-07](https://github.com/user-attachments/assets/320006e9-93c0-4c0c-a33a-b75af75000a7)",
-  "reactions": {
-    "url": "https://api.github.com/repos/crownengine/crown/releases/188288503/reactions",
-    "total_count": 4,
-    "+1": 3,
-    "-1": 0,
-    "laugh": 0,
-    "hooray": 1,
-    "confused": 0,
-    "heart": 0,
-    "rocket": 0,
-    "eyes": 0
-  }
+  "tarball_url": "https://api.github.com/repos/crownengine/crown/tarball/v0.54.0",
+  "zipball_url": "https://api.github.com/repos/crownengine/crown/zipball/v0.54.0",
+  "body": "Crown 0.54 is out with right-handed Z-up world coordinates, FBX scene importer, strengthened SJSON parser and Data Compiler, greatly improved Project Browser, enhanced support for Units with children and many other improvements and fixes:\r\n\r\n:scroll: [Changelog](https://docs.crownengine.org/html/latest/changelog.html#jan-2025)\r\n:floppy_disk: [Download](https://crownengine.org/download)\r\n:heart: [Donate](https://crownengine.org/fund)\r\n\r\n![image](https://github.com/user-attachments/assets/79abb46e-5e16-4045-8dc4-acd4c05cd8ab)\r\n\r\nP.S: Lamp model from ufbx library docs."
 }
